--- a/src/Todo.Ui/src/app/pages/home/home.component.html
+++ b/src/Todo.Ui/src/app/pages/home/home.component.html
@@ -34,8 +34,8 @@
 
                 <div class="flex flex-col gap-2">
                     <label for="taskDate" class="text-sm font-medium text-foreground">Data:</label>
-                    <input type="date" id="taskDate" [(ngModel)]="selectedDate" (change)="onDateChange()"
-                        class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50">
+                    <app-custom-datepicker [(ngModel)]="selectedDate" (valueChange)="onDateChange()" inputId="taskDate">
+                    </app-custom-datepicker>
                 </div>
 
                 <button (click)="clearFilters()"
